# FlowMind

./: .gitignore  README.md  _fix_pom_test.py
python-ai-service/: .dockerignore  Dockerfile  README.md  pyproject.toml  requirements.txt  test_config.py
python-ai-service/app/: main.py
python-ai-service/app/adapters/: __init__.py  base.py  factory.py  gateway.py
python-ai-service/app/agent/: __init__.py  base.py
python-ai-service/app/agents/: agent_executor.py  base_agent.py  chat_agent.py
python-ai-service/app/core/: config.py  database.py  logger.py
python-ai-service/app/graph/: __init__.py  intern_graph.py  state.py
python-ai-service/app/kb/: __init__.py  document_parser.py  document_service.py  document_status.py  file_storage.py  knowledge_base_service.py  manager.py  models.py  upload_manager.py
python-ai-service/app/knowledge/: __init__.py  base.py
python-ai-service/app/llm/: base.py  deepseek_provider.py  gateway.py  model_factory.py  openai_client.py  openai_provider.py  prompt_builder.py
python-ai-service/app/memory/: __init__.py  base.py  conversation_memory.py  memory_keys.py  memory_manager.py  redis_client.py  state_memory.py
python-ai-service/app/pipeline/: __init__.py  (+5 more)
python-ai-service/src/: config.py  main.py
python-ai-service/tests/: conftest.py  test_clarify.py  test_clarify_routes.py  test_clarify_v2.py  test_document_pipeline.py  test_graph.py  test_graph_rag.py  test_intent.py  test_kb.py  test_memory.py  test_memory_v2.py  test_pipe.py  test_rag.py  test_rag_retrieval.py  test_rerank_citation.py  test_retrieval_engine.py  test_slot_manager.py  test_sql.py  test_sql_agent.py  test_sse.py  test_state.py
(+490 files in other folders)
