[tool.poetry]
name = "ai-agent-python-service"
version = "1.0.0"
description = "Enterprise AI Agent - Python AI Service: Agent orchestration, LLM inference, prompt management"
authors = ["Enterprise AI Team"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = ">=3.11,<3.13"
fastapi = "^0.115.0"
uvicorn = { version = "^0.32.0", extras = ["standard"] }
langchain = "^0.3.0"
langchain-openai = "^0.2.0"
langchain-community = "^0.3.0"
langgraph = "^0.2.0"
pydantic = "^2.9.0"
pydantic-settings = "^2.6.0"
httpx = "^0.27.0"
grpcio = "^1.67.0"
grpcio-tools = "^1.67.0"
redis = "^5.2.0"
kafka-python = "^2.0.2"
python-dotenv = "^1.0.1"
jinja2 = "^3.1.4"
tenacity = "^9.0.0"
tiktoken = "^0.8.0"
sqlalchemy = "^2.0.36"
pymysql = "^1.1.1"
alembic = "^1.14.0"
prometheus-fastapi-instrumentator = "^7.0.0"
opentelemetry-api = "^1.28.0"
opentelemetry-instrumentation-fastapi = "^0.49b0"

[tool.poetry.group.dev.dependencies]
pytest = "^8.3.0"
pytest-asyncio = "^0.24.0"
pytest-cov = "^5.0.0"
ruff = "^0.7.0"
mypy = "^1.13.0"
black = "^24.10.0"
pre-commit = "^4.0.0"

[tool.poetry.scripts]
start = "src.main:main"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.ruff]
line-length = 120
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.mypy]
python_version = "3.11"
strict = true
ignore_missing_imports = true

[tool.black]
line-length = 120
target-version = ["py311"]
